# agentic-reserving

./: .convexignore  .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  proxy.ts  vitest.config.mts
_bmad/: config.toml
_bmad-output/: project-context.md
app/: globals.css  layout.tsx  page.tsx
components/: ConvexClientProvider.tsx  CopyableHash.tsx  DiagnosticsPanels.tsx  EngineOnlyBanner.tsx  ProvenancePopover.tsx  RederivationPanel.tsx  ResultsGrid.tsx  RunConfig.tsx  RunDetail.tsx  SidebarNav.tsx  StatusBadge.tsx  StepRail.tsx  TriangleGrid.tsx  TriangleStatusIndicator.tsx  UploadWizard.tsx  methods.ts  runConfigPaste.ts
convex/: audit.ts  auditLogs.test.ts  auditLogs.ts  auth.config.ts  authGuard.test.ts  convex.config.ts  http.test.ts  http.ts  interpretationMode.test.ts  interpretationMode.ts  runs.test.ts  runs.ts  schema.ts  triangles.test.ts  triangles.ts  tsconfig.json  workflow.ts
engine/: .env.example  pyproject.toml
engine/copilot_agent/: __init__.py  _draft_json.py  agent.py  recommendations.py  reserve_report.py  tools.py  transcript.py
engine/engine_service/: __init__.py  app.py  auth.py  config.py  errors.py  interpretation_errors.py  models.py  provenance_gate.py  recommendations_flow.py  report_flow.py
engine/reserving_engine/: __init__.py  diagnostics.py  methods.py  recommendations.py  rederivation.py  reserve_report.py  resultset.py  triangle.py  validation.py  version.py
engine/scripts/: __init__.py  export_schema.py
engine/tests/: fixtures.py  test_config.py  test_copilot_agent.py  test_diagnostics.py  test_engine_service.py  test_golden_taylor_ashe.py  test_provenance_gate.py  test_recommendations.py  test_recommendations_flow.py  test_recommendations_prompt.py  test_rederivation.py  test_report_flow.py  test_reserve_report.py  test_reserve_report_prompt.py  test_resultset_models.py  test_run_methods.py  test_scaffold.py  test_schema_contract.py  test_triangle_hash.py  test_triangle_model.py  test_triangle_validation.py  test_version_sync.py
engine/tests/fixtures/: taylor_ashe_all_methods_resultset.json  taylor_ashe_diagnostics.json  taylor_ashe_resultset.json
lib/: formatNumber.ts
sample-data/: README.md  bad-not-a-workbook.xlsx  raa-paid.csv  (+3 more)
(+140 files in other folders)
