[project]
name = "engine"
version = "0.1.0"
description = "Reserving Copilot Python plane: reserving_engine (pure core), engine_service (FastAPI shell), copilot_agent (Agno agent)"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.7.3,<3",
    "chainladder==0.9.2",
    "fastapi==0.139.0",
    "google-genai>=2.12.0",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
]

[tool.uv]
package = false
